--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jstack",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,7 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.2.1",
+    "@clerk/nextjs": "^6.3.4",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
@@ -21,15 +22,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
-    "hono": "^4.5.5",
+    "hono": "^4.6.10",
     "init": "^0.1.2",
     "lucide-react": "^0.454.0",
     "next": "^14.2.8",
+    "next-navigation": "^1.0.6",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
     "react-syntax-highlighter": "^15.6.1",
-    "shadcn": "^2.1.6",
+    "shadcn": "^1.0.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
