--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.4",
+    "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@upstash/redis": "^1.34.0",
@@ -32,6 +34,7 @@
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
     "shadcn": "^1.0.0",
     "superjson": "^2.2.1",
