--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.4",
+    "@discordjs/rest": "^2.4.0",
     "@hookform/resolvers": "^3.9.1",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
@@ -20,6 +21,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.51.23",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
@@ -50,6 +52,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "discord-api-types": "^0.37.105",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
