--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-table": "^8.20.5",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.53.2",
     "react-syntax-highlighter": "^15.6.1",
     "shadcn": "^1.0.0",
+    "stripe": "^17.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
