--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-table": "^8.20.5",
     "@upstash/redis": "^1.34.0",
+    "axios": "^1.8.2",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
